# Type-2-FLS-Simulation

./: README.md
src/: .rosinstall  .rosinstall.bak
src/vant/: CMakeLists.txt  package.xml
src/vant/include/fuzzylite/debug/: CMakeCache.txt  Makefile  cmake_install.cmake
src/vant/include/fuzzylite/fl/: Benchmark.h  Complexity.h  Console.h  Engine.h  Exception.h  Headers.h  Operation.h
src/vant/include/fuzzylite/fl/activation/: Activation.h  First.h  General.h  Highest.h  Last.h  Lowest.h  Proportional.h  Threshold.h
src/vant/include/fuzzylite/fl/defuzzifier/: Bisector.h  Centroid.h  Defuzzifier.h  IntegralDefuzzifier.h  LargestOfMaximum.h  MeanOfMaximum.h  SmallestOfMaximum.h  WeightedAverage.h  WeightedAverageCustom.h  WeightedDefuzzifier.h  WeightedSum.h  WeightedSumCustom.h
src/vant/include/fuzzylite/fl/factory/: ActivationFactory.h  CloningFactory.h  ConstructionFactory.h  DefuzzifierFactory.h  FactoryManager.h  FunctionFactory.h  HedgeFactory.h  SNormFactory.h  TNormFactory.h  TermFactory.h
src/vant/include/fuzzylite/fl/hedge/: Any.h  Extremely.h  Hedge.h  HedgeFunction.h  Not.h  Seldom.h  Somewhat.h  Very.h
src/vant/include/fuzzylite/fl/imex/: CppExporter.h  Exporter.h  FclExporter.h  FclImporter.h  FisExporter.h  FisImporter.h  FldExporter.h  FllExporter.h  FllImporter.h  Importer.h  JavaExporter.h  RScriptExporter.h
src/vant/include/fuzzylite/fl/norm/: Norm.h  SNorm.h  TNorm.h
src/vant/include/fuzzylite/fl/norm/s/: AlgebraicSum.h  BoundedSum.h  DrasticSum.h  EinsteinSum.h  HamacherSum.h  Maximum.h  NilpotentMaximum.h  NormalizedSum.h  SNormFunction.h  UnboundedSum.h
src/vant/include/fuzzylite/fl/norm/t/: AlgebraicProduct.h  BoundedDifference.h  DrasticProduct.h  EinsteinProduct.h  HamacherProduct.h  Minimum.h  NilpotentMinimum.h  TNormFunction.h
src/vant/include/fuzzylite/fl/rule/: Antecedent.h  Consequent.h  Expression.h  Rule.h  RuleBlock.h
src/vant/include/fuzzylite/fl/term/: Activated.h  Aggregated.h  Bell.h  Binary.h  Concave.h  Constant.h  Cosine.h  Discrete.h  Function.h  Gaussian.h  GaussianProduct.h  Linear.h  PiShape.h  Ramp.h  Rectangle.h  SShape.h  Sigmoid.h  SigmoidDifference.h  SigmoidProduct.h  Spike.h  Term.h  Trapezoid.h  Triangle.h  ZShape.h
src/vant/include/fuzzylite/fl/variable/: InputVariable.h  OutputVariable.h  Variable.h
src/vant/include/fuzzylite/release/: CMakeCache.txt  Makefile  cmake_install.cmake
src/vant/include/vant/: ToOffboard.h  Trajetoria.cpp  Trajetoria.h  mission.cpp  mission.h  vaant.cpp  vaant.h  vant.cpp  vant.h  vision.cpp  vision.h  wp.h
src/vant/msg/: ToOffboard.msg  poseTagged.msg  poseTagged.msg~  wp.msg
src/vant/src/: gazeboCameraPlugin.cpp  landingPID.cpp  landingV5.cpp  landingV6.cpp  landingV7.cpp  multiTagsLandingV2reverse.cpp  seekMarker.cpp  send_fixed_pose.cpp  toPublishV2.cpp
